--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,8 +18,8 @@ steps:
 
 - task: UseDotNet@2
   inputs:
+    packageType: 'sdk'
     version: '3.1.x'
-    packageType: runtime
     includePreviewVersions: true
 
 - task: DotNetCoreCLI@2
