--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,7 @@ steps:
   inputs:
     packageType: 'sdk'
     version: '3.1.x'
+    installationPath: $(Agent.ToolsDirectory)/dotnet
     includePreviewVersions: true
 
 - task: DotNetCoreCLI@2
