--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,15 +24,8 @@ steps:
     - script: dotnet build --configuration $(buildConfiguration)
       displayName: 'dotnet build $(buildConfiguration)'
 
-    # script: dotnet publish True.Test --output $(Build.ArtifactStagingDirectory)\pixxles
-
-    - task: DotNetCoreCLI@2
-      displayName: "Publish"
-      inputs:
-        command: 'publish'
-        publishWebProjects: true
-        arguments: '-r linux-x64 True.Test --configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)/test'
-        zipAfterPublish: true
+    - script: dotnet publish --output $(Build.ArtifactStagingDirectory)/pixxles
+      displayName: 'dotnet publish $(buildConfiguration)'
 
     - task: AzureWebApp@1
       displayName: "Deploy"
@@ -40,5 +33,5 @@ steps:
         azureSubscription: 'Free Trial(452736f5-593f-4c13-b1f1-18976add034c)'
         appType: 'webApp'
         appName: 'pixxles-dev-test'
-        package: '$(Build.ArtifactStagingDirectory)/test/*.zip'
-        deploymentMethod: 'zipDeploy'
+        package: '$(Build.ArtifactStagingDirectory)/pixxles'
+        deploymentMethod: 'auto'
