--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,16 +26,8 @@ steps:
       displayName: 'dotnet build $(buildConfiguration)'
 
     - script: dotnet publish --output $(Build.BinariesDirectory)/release-artifact
+      condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/heads/release/'))
       displayName: 'dotnet publish $(buildConfiguration)'
-
-    - task: AzureWebApp@1
-      displayName: "Deploy"
-      inputs:
-        azureSubscription: 'Free Trial(452736f5-593f-4c13-b1f1-18976add034c)'
-        appType: 'webApp'
-        appName: 'pixxles-dev-test'
-        package: '$(Build.ArtifactStagingDirectory)/pixxles'
-        deploymentMethod: 'auto'
 
     - task: PublishBuildArtifacts@1
       condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/heads/release/'))
