--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,11 +28,11 @@ steps:
       displayName: 'dotnet build $(buildConfiguration)'
 
     - script: dotnet publish --output $(Build.BinariesDirectory)/release-artifact
-      condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/heads/master/'))
+      condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/heads/master'))
       displayName: 'dotnet publish $(buildConfiguration)'
 
     - task: PublishBuildArtifacts@1
-      condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/heads/master/'))
+      condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/heads/master'))
       inputs:
         PathtoPublish: '$(Build.BinariesDirectory)/release-artifact'
         ArtifactName: 'artifacts'
