--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,13 +27,13 @@ steps:
     - script: dotnet build --configuration $(buildConfiguration)
       displayName: 'dotnet build $(buildConfiguration)'
 
-    - script: dotnet publish --output $(Build.BinariesDirectory)/release-artifact
+    - script: dotnet publish --output $(Build.ArtifactStagingDirectory)/artifact
       condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/heads/master'))
       displayName: 'dotnet publish $(buildConfiguration)'
 
     - task: PublishBuildArtifacts@1
       condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/heads/master'))
       inputs:
-        PathtoPublish: '$(Build.BinariesDirectory)/release-artifact'
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)/artifact'
         ArtifactName: 'artifacts'
         publishLocation: 'Container'
