--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ variables:
   solution: '**/*.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
-  needArtifacts: $[or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), startsWith(variables['Build.SourceBranch'], 'refs/heads/release/'))]
+  needArtifacts: or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), startsWith(variables['Build.SourceBranch'], 'refs/heads/release/'))
 
 steps:
     - task: UseDotNet@2 
@@ -29,11 +29,11 @@ steps:
       displayName: 'dotnet build $(buildConfiguration)'
 
     - script: dotnet publish --output $(Build.ArtifactStagingDirectory)/artifact
-      condition: and(succeeded(), eq(variables.needArtifacts, true))
+      condition: and(succeeded(), eq($(needArtifacts), true))
       displayName: 'dotnet publish $(buildConfiguration)'
 
     - task: PublishBuildArtifacts@1
-      condition: and(succeeded(), eq(variables.needArtifacts, true)))
+      condition: and(succeeded(), eq($(needArtifacts), true)))
       inputs:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)/artifact'
         ArtifactName: 'artifacts'
